# Honam-IS-Hackathon

./: .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_issue.yml  feature_request.yml  personal-role-lane.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py  retrieval.py  safety.py  schemas.py  settings.py  source_data.py
backend/tests/: test_chat.py  test_health.py  test_retrieval.py  test_safety.py
database/: schema.sql
docs/: index.md
docs/00-overview/: README.md  project-summary.md
docs/01-requirements/: README.md  req-official-source-rag.md  req-safety-privacy.md
docs/02-decisions/: README.md  adr-0001-docs-source-of-truth.md
docs/03-conventions/: README.md  conv-final-report-writing.md  conv-git-branch-and-pr.md  conv-repo-structure.md
docs/04-architecture/: README.md  deployment-precheck.md  model-provider-policy.md  mvp-boundaries.md  service-map.md
docs/05-work-items/: README.md  official-source-inventory.md  personal-role-lanes.md  pre-execution-checklist.md
docs/06-meetings/: README.md
docs/07-status/: README.md  current-status.md
docs/08-reports/: 00-index.md  01-report-template.md  README.md
docs/09-ppts/: README.md  index.md
docs/architecture/: README.md  api-contract.md  deployment-precheck.md  mvp-boundaries.md
docs/planning/: README.md  multilingual-glossary.md  representative-questions.md
frontend/: package.json
(+4 files in other folders)
