[project]
name = "honam-rag-backend"
version = "0.1.0"
description = "FastAPI scaffold for the Honam/Gwangju official-source RAG feasibility MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
